# emit

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: emitConfig.cmake.in
include/emit/: emit.hpp
include/emit/detail/: connection.hpp  pipeline_delegate.hpp
include/emit/features/: dispatcher.hpp  pipeline.hpp
include/emit/resources/: delegate.hpp  dispatcher.hpp  generic_pipeline.hpp  pipeline.hpp
include/emit/utility/: generic_pipeline.hpp  memory.hpp  type_index.hpp
